--- a/internal/projects/bulleit/Stamped/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Stamped/CreateStampViewController.xib
@@ -100,7 +100,7 @@
 							<object class="IBUILabel" id="895504012">
 								<reference key="NSNextResponder" ref="870662028"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{30, 50}, {270, 15}}</string>
+								<string key="NSFrame">{{36, 49}, {270, 15}}</string>
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="101741781"/>
@@ -124,7 +124,7 @@
 							<object class="IBUIImageView" id="715334343">
 								<reference key="NSNextResponder" ref="870662028"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 51}, {12, 12}}</string>
+								<string key="NSFrame">{{17, 50}, {15, 12}}</string>
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="895504012"/>
@@ -234,7 +234,7 @@
 											</object>
 											<object class="IBUITextView" id="739928940">
 												<reference key="NSNextResponder" ref="234167628"/>
-												<int key="NSvFlags">308</int>
+												<int key="NSvFlags">310</int>
 												<string key="NSFrame">{{69, 0}, {241, 104}}</string>
 												<reference key="NSSuperview" ref="234167628"/>
 												<reference key="NSWindow"/>
@@ -247,10 +247,9 @@
 												<bool key="IBUIClipsSubviews">YES</bool>
 												<bool key="IBUIMultipleTouchEnabled">YES</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-												<bool key="IBUIBounces">NO</bool>
+												<bool key="IBUIAlwaysBounceVertical">YES</bool>
 												<bool key="IBUIScrollEnabled">NO</bool>
 												<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
-												<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 												<string key="IBUIText"/>
 												<reference key="IBUIFont" ref="532721506"/>
 												<object class="IBUITextInputTraits" key="IBUITextInputTraits">
@@ -677,6 +676,22 @@
 					</object>
 					<int key="connectionID">107</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mainCommentContainer</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="234167628"/>
+					</object>
+					<int key="connectionID">108</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">backgroundImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="730835077"/>
+					</object>
+					<int key="connectionID">109</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -968,7 +983,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">107</int>
+			<int key="maxID">109</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1019,11 +1034,13 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>backgroundImageView</string>
 							<string>bottomToolbar</string>
 							<string>categoryImageView</string>
 							<string>creditTextField</string>
 							<string>detailLabel</string>
 							<string>editButton</string>
+							<string>mainCommentContainer</string>
 							<string>reasoningLabel</string>
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
@@ -1036,11 +1053,13 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIImageView</string>
 							<string>UIView</string>
 							<string>UIImageView</string>
 							<string>STCreditTextField</string>
 							<string>UILabel</string>
 							<string>UIButton</string>
+							<string>UIView</string>
 							<string>UILabel</string>
 							<string>UITextView</string>
 							<string>UIView</string>
@@ -1056,11 +1075,13 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>backgroundImageView</string>
 							<string>bottomToolbar</string>
 							<string>categoryImageView</string>
 							<string>creditTextField</string>
 							<string>detailLabel</string>
 							<string>editButton</string>
+							<string>mainCommentContainer</string>
 							<string>reasoningLabel</string>
 							<string>reasoningTextView</string>
 							<string>ribbonedContainerView</string>
@@ -1073,6 +1094,10 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">backgroundImageView</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">bottomToolbar</string>
 								<string key="candidateClassName">UIView</string>
@@ -1092,6 +1117,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">editButton</string>
 								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">mainCommentContainer</string>
+								<string key="candidateClassName">UIView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">reasoningLabel</string>
@@ -1134,14 +1163,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CreateStampViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">STCreditTextField</string>
-					<string key="superclassName">UITextField</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/STCreditTextField.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
