--- a/internal/projects/bulleit/Stamped/SearchEntitiesViewController.xib
+++ b/internal/projects/bulleit/Stamped/SearchEntitiesViewController.xib
@@ -57,7 +57,7 @@
 								<string key="NSFrame">{{0, -190}, {320, 240}}</string>
 								<reference key="NSSuperview" ref="709319091"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="780588220"/>
+								<reference key="NSNextKeyView" ref="459194021"/>
 								<string key="NSReuseIdentifierKey">_NS:363</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUIContentMode">6</int>
@@ -146,6 +146,22 @@
 								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">cancel_background@2x.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="459194021">
+								<reference key="NSNextResponder" ref="709319091"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{320, 2}</string>
+								<reference key="NSSuperview" ref="709319091"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="780588220"/>
+								<string key="NSReuseIdentifierKey">_NS:541</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">top-round-corner-mask@2x.png</string>
 								</object>
 							</object>
 						</object>
@@ -384,6 +400,7 @@
 							<reference ref="672323501"/>
 							<reference ref="780588220"/>
 							<reference ref="701797646"/>
+							<reference ref="459194021"/>
 						</object>
 						<reference key="parent" ref="873029372"/>
 					</object>
@@ -432,6 +449,11 @@
 						<reference key="object" ref="953935145"/>
 						<reference key="parent" ref="434293006"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">45</int>
+						<reference key="object" ref="459194021"/>
+						<reference key="parent" ref="709319091"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -454,6 +476,7 @@
 					<string>40.IBPluginDependency</string>
 					<string>41.IBPluginDependency</string>
 					<string>42.IBPluginDependency</string>
+					<string>45.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -473,6 +496,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -487,7 +511,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">44</int>
+			<int key="maxID">45</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -584,6 +608,7 @@
 				<string>plus_icon.png</string>
 				<string>plus_icon_highlighted.png</string>
 				<string>shelf_background.png</string>
+				<string>top-round-corner-mask@2x.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
@@ -592,6 +617,7 @@
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{320, 240}</string>
+				<string>{640, 4}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">534</string>
