Update bugs and shit.

--- a/internal/projects/bulleit/Stamped/FirstRunViewController.xib
+++ b/internal/projects/bulleit/Stamped/FirstRunViewController.xib
@@ -202,7 +202,7 @@
 								<string key="NSFrame">{{224, 19}, {76, 40}}</string>
 								<reference key="NSSuperview" ref="811322092"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="529329870"/>
 								<string key="NSReuseIdentifierKey">_NS:222</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -239,6 +239,7 @@
 								<string key="NSFrame">{{252, 28}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="811322092"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:824</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -526,7 +527,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUIText"/>
-						<string key="IBUIPlaceholder">new password</string>
+						<string key="IBUIPlaceholder">password</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
